# prag

./: .clang-format  .gitignore  README.md
d/: .gitignore  bhw.d  demo.d  learn  learn.d  main.d  makefile  models.d
d/core/: cpp.d  csv.d  generator.d  go.d  haskell.d  java.bak  java.d  python.d  ruby.d  rust.d  sql.d  types.d  typescript.d  xml.d  yaml.d  zig.d
go/: go.mod  main.go
metafront/: .clang-format  .gitignore  LICENSE  README.md  makefile  meta.out  metafront.cpp  metafront2  metafront2.cpp  metafront3  metafront3.cpp  out.txt  reflect.cpp  reflect.sh  tuple.txt  weird.sh
metafront/demo/: complexrow.h  demo-all.cpp  demo01.cpp  demo02.cpp  demo03.cpp  demo04.cpp  demo05.cpp  demo06.cpp  demo07.cpp  demo08.cpp  demo09.cpp  demo10.cpp  demo11.cpp  demo12  demo12.cpp  demo13.cpp  demo14.cpp  demo15.cpp  demoall.cpp  getter.h  makefile  nested.cpp  nested.h  out.txt  private  private.cpp  private.h
metafront/meta/: Meta.d  meta_csv.h  meta_db.h  meta_extract.h  meta_field.h  meta_field2.h  meta_json.h  meta_lang.h  meta_map.h  meta_mdb.h  meta_primitive.h  meta_proto.h  meta_sql.h  meta_txt.h  meta_vector.h  meta_xml.h  meta_yaml.h
metafront/slides/: .picasa.ini  multi.py  slides1.json  slides2.json  slides3.json  tmp  to_pdf.py
pr-cpp-clang-cpp/: pr-cpp-2.cpp  pr-cpp-3.cpp  pr-cpp.cpp  prag.json
pr-csharp/: CSharpParser.csproj  README.md  examples.cs  pr-csharp.cs
pr-go/: go.mod  main.go  pr-go
pr-python/: example.ps  gen.py  pr-python.py
pr-python/generated_cpp/: bar.h
pr-python/src/: bhw.py  check-ast.py  classes.py  demo.py  entry.h  input.py  k8s.py  meet.h  mt_event.h  py-ast-sim.py  py-ast2.py  py-to-yaml.py  relay.h  result.h  team.h  to-yaml-error.py  to-yaml.py
pr-python/src/langs/: cpp.py  (+1 more)
pr-rust/: Cargo.toml
pr-rust/src/: tuples.rs
prag/: .clang-tidy  .gitignore  CMakeLists.txt  go_parser_limitation.md  oneof.txt
prag/config/: gen.rb  lang.yaml  languages.rs
prag/src/: CMakeLists.txt  config.cpp  cpp_enum.cpp  cpp_generator.cpp  cpp_reflect.cpp  prag.cpp  validate.cpp
prag/src/ast/: CMakeLists.txt  ast.cpp  ast.h  ast_parser.h  ast_walker.h  enums.h  language_info.h  languages.cpp  languages.h  languages_enums.def  reified.h  reified_enums.def  schema.cpp  schema.h
prag/src/input/: CMakeLists.txt  avro_parser.h  capnp_parser.cpp  capnp_parser.h  cpp_parser.cpp  cpp_parser.h  csharp_parser.h  flatbuf_parser.cpp  flatbuf_parser.h  fsharp_parser.h  go_parser.cpp  go_parser.h  graphql_parser.cpp  graphql_parser.h  haskell_parser.h  jsonschema_parser.h  mdb_parser.cpp  mdb_parser.h  ocaml_parser.h  openapi_parser.h  parser_registry.cpp  parser_registry.h  parser_registry2.h  prag_parser.h  protobuf_parser.cpp  protobuf_parser.h  python_parser.cpp  python_parser.h  rust_parser.cpp  rust_parser.h  thrift_parser.cpp  thrift_parser.h  typescript_parser.cpp  typescript_parser.h
prag/src/output/: CMakeLists.txt  avro_walker.h  capnp_walker.h  cpp_walker.h  csharp_walker.h  fsharp_walker.h  go_walker.h  haskell_walker.h  java_walker.h  jsonschema_walker.h  ocaml_walker.h  openapi_walker.h  prag_walker.h  protobuf_walker.h  python_walker.h  registry_ast_walker.h  rust_walker.h  walker_registry.cpp  walker_registry.h  zig_walker.h
prag/tests/: CMakeLists.txt  auto.cpp  test_util.cpp  test_util.h
prag/tests/avsc/inputs/: enum.avsc  fixed.avsc  map_array.avsc  nested.avsc  optional.avsc  simple.avsc
prag/tests/capn/inputs/: example.capnp
prag/tests/cpp/inputs/: test.cpp  variant01.cpp
prag/tests/cs/inputs/: variant01.cs
prag/tests/fbs/inputs/: example2.fbs  example3.fbs
prag/tests/go/inputs/: nested2.go  nested3.go
prag/tests/gpl/: example02.gpl
prag/tests/h/inputs/: complex01.h  complex02.h  complexrow.h  declared-struct.h  empty-struct.h  enum-in-struct-1.h  enum-in-struct-2.h  enum-in-struct-3.h  enum.h  language.h  map-of-declared-types.h  multi.h  multi02.h  namespace01.h  nested-3-anon-var.cpp  nested-3-anon-var.h  nested-3-named-var-1.h  nested-3-named-var-2.h  nested-3-named.cpp  nested-3-named.h  nested-generic.h  nested-struct01.h  nested-struct02.h  nestetd-crazy.h  reified.h  simple-struct.h  struct-string.h  struct-vector.h  super-nested.h  variant01.h  vector-of-declared-type.h
prag/tests/h/meta/: field.BAK  field.h  json.h  json.sav  meta.h  txt.h  yaml.h
prag/tests/h/reflect/: Makefile  attrs  atttrs.cpp  car.cpp  car.not  complex01  complex01.cpp  complex01.h  complex02.cpp  complex02.h  complex02.not  myclass.h  nested-3-anon-var  nested-3-anon-var.cpp  nested-3-anon-var.h  nested-3-anon-var.not  out.txt  valid01.cpp  valid01.not  valid02.cpp  valid03.cpp  valid03.not  variant01  variant01.cpp  variant01.h
prag/tests/json/inputs/: simple.schema.json  with_ref.json
prag/tests/mdb/inputs/: 2006.mdb  all.mdb  example.mdb  relay.mdb
prag/tests/ml/inputs/: complexrow.ml
prag/tests/openapi/inputs/: enum.openapi  nested.openapi  refs.openapi  simple.openapi  types.openapi
prag/tests/proto/inputs/: exmple01.proto  oneof01.proto  oneof02.proto  sample.proto  simple.proto
prag/tests/rs/inputs/: complex01.rs  example.rs  out.rs
prag/tests/thrift/: example.thrift
prag/tests/typescript/: example1.out  example1.ts  example2.out  example2.ts  simple1.ts
python/generated_cpp/: baz.h  foo.h
python/src/: athlete.h  bhw.py  check-ast.py  classes.py  demo.py  input.py  k8s.py  py-ast-sim.py  py-ast.py  py-ast2.py  py-to-yaml.py  to-yaml.py
ruby/: Rakefile  algo  athlete.txt  bhw.rb  class.rb  config.yaml  cpp.rb  cpp.yaml  cpp26.nxt  cpp26.rb  cpp26.yaml  csharp.rb  extend.rb  fsharp-class.rb  fsharp.rb  go.rb  java.rb  java.yaml  main.py  main.python  main.rb  mdb.rb  meet  meet.txt  meets  meets.py  meta_proto.h  mock.py  notes  out.txt  python-classes.rb  python-meta.rb  python.rb  python.yaml  reduce  relay.txt  result.txt  ruby.rb  ruby.yaml  rust.rb  (+5 more)
ruby/cpp/: CMakeLists.txt  bsql.h  distinct.h  mdb.cpp  mdb.h  meta_field.h  meta_sql.h  meta_txt.h  util.cpp  util.h
rust/: Cargo.toml
rust/src/: example.rs  main.rs  main2.rs  main3.rs  main4.rs  main5.rs  main7.rs  out.rs  tuples.rs
(+185 files in other folders)
